--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,5 @@
 <div>
-
+<img src="/images/beer.png"/>
+<a class = "buttons" href="/beers">Check The Beers!</a>
+<a class= "buttons" href="/random-beer">Check a Random Beer</a>
 </div>
